--- a/style.css
+++ b/style.css
@@ -111,3 +111,12 @@ h5#exampleModalLongTitle {
 .label-copy {
     color: black;
 }
+
+.loadAlert {
+    justify-content: center
+}
+.loadAlert p {
+    margin: 1.3rem 0;
+    align-content: center;
+    text-align: center;
+}
