--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
     color:white;
     background-color: gray;
     border: none;
+    border-radius: 0px;
 }
 
 .navbar {
@@ -18,6 +19,7 @@
 button.btn.btn-outline-success.my-2.my-sm-0 {
     border: solid 1px white;
     color: white;
+    border-radius: 0px;
 }
 
 a#navbarDropdown {
@@ -87,12 +89,12 @@ h4 {
     height: 5rem;
     background-color: rgb(35, 160, 0);
     margin-top: 2rem;
-
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
 .footer-text {
-    text-align: center;
-    padding-top: 2rem;
     color: white;
 }
 
@@ -113,8 +115,8 @@ h5#exampleModalLongTitle {
 }
 
 #topAlert{
-    background: bisque;
-    color: black;
+    background: rgb(35, 160, 0);
+    color: white;
     margin-bottom: 0rem;
 }
 
@@ -123,7 +125,7 @@ h5#exampleModalLongTitle {
     color: white;
     display: none;
     padding: 0.3rem;
-    border-radius: 4px;
+    border-radius: 0px;
     width: 100%;
     margin-bottom: .2rem;
     background: #ff2124;
@@ -133,7 +135,7 @@ h5#exampleModalLongTitle {
     color: white;
     display: none;
     padding: 0.3rem;
-    border-radius: 4px;
+    border-radius: 0px;
     width: 100%;
     margin-bottom: .2rem;
     background: #ff2124;
@@ -142,4 +144,45 @@ h5#exampleModalLongTitle {
 #completionMessage {
     color: black;
     /* display: none; */
+}
+
+.qty-dropdown {
+    color: black;
+    background-color: white;
+    border: black 2px solid;
+    border-radius: 0px;
+}
+
+.form-control {
+    border-radius: 0px;
+}
+
+button#modalSubmit {
+    background: white;
+    color: black;
+    border-radius: 0px;
+    border: solid 2px black;
+}
+
+.add-to-cart {
+    background: white;
+    color: black;
+    border-radius: 0px;
+    border: solid 2px black;
+}
+
+.nav-redirect {
+    color: white;
+    text-decoration: underline;
+}
+
+button#closeAlert {
+    color: white;
+}
+
+.help-button {
+    color: white;
+    border: white solid 2px;
+    border-radius: 0px;
+    background: none;
 }
